[ENH] Improves header, links shared assets to Victoria's new CDN, removes old logos

--- a/1-settings/_settings.global.scss
+++ b/1-settings/_settings.global.scss
@@ -62,6 +62,10 @@ $text-input-border: 2px solid $grey-silver !default;
 $base-margin:   1.5em !default;
 $base-padding:  2em !default;
 
+// Accessiblity
+$base-outline: 2px solid #2E8ACA;
+
+
 // Animations
 $base-transition-duration: .5s !default;
 $base-transition-function: ease !default;
