--- a/1-settings/_settings.paths.scss
+++ b/1-settings/_settings.paths.scss
@@ -14,20 +14,23 @@ $path-assets:    '..' !default;
 // 1st level
 $path-imgs:      $path-assets + '/img' !default;
 $path-fonts:     $path-assets + '/fonts' !default;
-$path-shared:    $path-assets + '/shared' !default;
 
 // 2nd level
-$path-shared-imgs:    $path-shared + '/img' !default;
-$path-shared-fonts:   $path-shared + '/fonts' !default;
 
 
 /* ===== CDNS =============================================================== */
 
-$urlCDNFonts:      '//fonts.googleapis.com/css' !default;
+// 1st level
+$path-cdn:        'https://static.victoria.ac.nz';
+
+
+// 2nd level
+$path-cdn-imgs:    $path-cdn + '/img' !default;
+$path-cdn-fonts:   $path-cdn + '/fonts' !default;
+
 
 
 /* ===== FONTS ============================================================== */
 
-$path-font-oxygen:        $urlCDNFonts + '?family=Oxygen:300,400,700' !default;
-$path-font-victoria:      $path-shared-fonts + '/NationalWebLF' !default;
-$path-fonticon-victoria:  $path-shared-fonts + '/vic-icons' !default;
+$path-font-victoria:      $path-cdn-fonts + '/NationalWebLF' !default;
+$path-fonticon-victoria:  $path-fonts + '/vic-icons' !default;
