[ENH] Structure of collapsible panels improved.

--- a/4-base/_base.typography.scss
+++ b/4-base/_base.typography.scss
@@ -67,21 +67,26 @@ h5 {
 }
 
 
-q:before {
-    content: '';
+q {
+    &:before,
+    &:after {
+        content: '';
+    }
 }
-q:after {
-    content: '';
+
+@mixin linkify() {
+    color: $link-colour;
+    @include hoverify { color: $blue-curious-blue; }
 }
 
 a {
-    color: $link-colour;
+    @include linkify;
     text-decoration: none;
-    @include hoverify { color: $blue-curious-blue }
 }
 
-a, a > *:before, a > *:after, .tooltip-icon  {
+a,
+a > *:before,
+a > *:after,
+.tooltip-icon  {
     @include transitionise();
 }
-
-/* Lists */
