--- a/6-components/_components.simple-blocks.scss
+++ b/6-components/_components.simple-blocks.scss
@@ -131,15 +131,14 @@ $nm-bg-color: $grey-gallery;
     display: table;
     width: 100%;
     vertical-align: middle;
-    cursor: pointer;
 
-    h2,
-    h3 {
-        display: inline-block;
-        margin-bottom: 0;
+    a {
+        display: block;
+        text-decoration: none;
 
-        a {
-            text-decoration: none;
+        h2,
+        h3 {
+            @include linkify;
 
             .ico {
                 display: block;
@@ -148,6 +147,12 @@ $nm-bg-color: $grey-gallery;
                 padding-right: .5em;
             }
         }
+    }
+
+    h2,
+    h3 {
+        display: inline-block;
+        margin-bottom: 0;
     }
 
     .tags {
