--- a/7-trumps/_trumps.layout.scss
+++ b/7-trumps/_trumps.layout.scss
@@ -11,3 +11,6 @@
     .x-ng-cloak {
         display: none !important;
     }
+
+    /** Hides elements that are used for accessibility reasons *ONLY* */
+    .aria-only { display: none; }
