--- a/5-objects/_objects.grid.scss
+++ b/5-objects/_objects.grid.scss
@@ -31,7 +31,7 @@ $block-margin: $base-margin;
 }
 
 
-.layout-rebase {} // Layout normaliser => Reset previous layouting rules
+//.layout-rebase {} // Layout normaliser => Reset previous layouting rules
 
 
 
@@ -62,6 +62,7 @@ $block-margin: $base-margin;
     // 1B. ... and all block-containers
     .sector .block-container &:not(:first-child) { padding-top: 0; }
     .block + .block-container &:first-child { padding-top: 0; }
+    .block + .block-container.two-col-layout &:last-child { padding-top: 0; }
 }
 
 
