--- a/6-components/_components.image-slide-show.scss
+++ b/6-components/_components.image-slide-show.scss
@@ -6,13 +6,10 @@
 
     .block-container { display: block; }
 
-    .slide-show-image {
-
-    }
+    // .slide-show-image { }
 }
 
-.slide-show__wrap {
-}
+//.slide-show__wrap {}
 
 .slide-show__description {
     text-align: center;
