--- a/6-components/_components.simple-blocks.scss
+++ b/6-components/_components.simple-blocks.scss
@@ -8,7 +8,7 @@
 $fun-fact-bg-color: $grey-gallery;
 
 
-.block__fact {}
+//.block__fact {}
 
 
 .fact__title {
@@ -169,8 +169,8 @@ $nm-bg-color: $grey-gallery;
     color: $grey-stack;
 
     &.ico:before {
-        font-size: 110%;
         margin-right: .3em;
+        font-size: 110%;
     }
 
     .tag {
@@ -185,9 +185,7 @@ $nm-bg-color: $grey-gallery;
         }
 
         &:last-child {
-            &::after {
-                content: "";
-            }
+            &::after { content: ""; }
         }
     }
 
@@ -243,79 +241,6 @@ $mar-bot: .3em;
 }
 
 
-//TODO: Remove after it's removed from the app.
-// DEPRECATED! Use tiles instead.
-.degree-block {
-    @include outer-container;
-    border-left: 6px solid $grey-alto;
-    margin: 1em 0;
-
-    &:last-child {  margin-bottom: 0; }
-    &:first-child { margin-top: 0; }
-
-    h3 {
-        color: $grey-mako;
-        margin-bottom: $mar-bot;
-
-        .code {
-            color: #999;
-            font-weight: $weight-light;
-        }
-    }
-
-    .degree-content {
-        @include span-columns(8);
-        @include media ( $mobile-large-and-smaller) {
-            @include fill-parent();
-        }
-
-        h3 {
-            margin-bottom: .5em;
-        }
-
-        .leads,
-        .length {
-            display: inline-block;
-            vertical-align: bottom;
-            margin: 0 1em .3em .5em;
-
-            .ico {
-                margin: 0 .25em 0 0;
-
-                &.arr-right,
-                &.clock {
-                    line-height: 1;
-                    vertical-align: middle;
-                }
-            }
-        }
-
-        .length .ico {
-            position: relative; top: -.1em;
-            font-size: 120%;
-        }
-
-        .leads .ico {
-            font-size: 1.45em;
-            margin-right: .33em;
-        }
-
-        .description {
-            margin-top: 1em;
-            font-size: 90%;
-        }
-    }
-    .degree-button {
-        min-width: 160px;
-        white-space: nowrap;
-
-        @include span-columns(2);
-        @include media ($mobile-large-and-smaller) {
-            max-width: 140px;
-        }
-    }
-}
-
 /** Example courses block (based on `related-areas`) */
 .example-courses {
     .grid-list { font-size: 85%; }
@@ -353,8 +278,6 @@ $mar-bot: .3em;
 
 .explore-areas-page {
     .block {
-        ul {
-            margin-left: 0.5em;
-        }
+        ul { margin-left: 0.5em; }
     }
 }
