--- a/5-objects/_objects.widgets.scss
+++ b/5-objects/_objects.widgets.scss
@@ -81,7 +81,6 @@ $tile-bg:      #f0f0f0;
         clear: both;
 
         &:first-child { margin-top: .75em; }
-
         .tile__header { margin: 1em $tile-padding; }
 
         .code {
@@ -97,9 +96,22 @@ $tile-bg:      #f0f0f0;
             float: right;
             text-align: right;
             min-width: 15em;
-            margin: .2em 0 1.5em 1.5em;
+            margin: 0 0 1.5em 1.5em;
 
             .btn { margin: 0; }
+
+            .note {
+                text-align: right;
+                font-size: 90%;
+                display: block;
+                margin-top: .35em;
+            }
+
+            .link {
+                text-decoration: underline;
+
+                @include hoverify() { text-decoration: none; }
+            }
         }
 
         .label .ico {
@@ -240,7 +252,47 @@ $tile-bg:      #f0f0f0;
     }
 }
 
-/** Cards */
+
+/** Inner content anchors links. */
+
+.content-anchors {
+
+    > strong {
+        display: inline-block;
+        margin-right: 1.75em;
+        font-weight: $weight-bold;
+    }
+
+    ul {
+        display: inline-block;
+        font-size: 110%;
+    }
+
+    li {
+        display: inline-block;
+        margin-right: .7em;
+
+        &:last-child::after { display: none; }
+
+        &:after {
+            @include objectify();
+            content: '\00B7';
+            margin-left: .4em;
+        }
+    }
+
+    @include media ( $mobile-large-and-smaller ) {
+
+        li,
+        > strong {
+           display: block;
+        }
+
+        > strong { margin-bottom: .5em; }
+        li:after { display: none; }
+    }
+}
+
 
 
 /** Collapsible/Expandable block. */
